# hoovy

./: .gitignore  Gambit-Options.txt  PrologOptions.txt  README.md  Xkeymap  adam.org  album1.org  aleasha.cl  aum.el  boust.el  chatserver.cl  client-test.el  crystal.org  cv.txt  dev.cl  ectron.el  emacs-init-current.el  emacs-init.el  emacs.el  emacs.org  emacsript.el  esprit.el  experiment.al  favicons.tar.bz2  foot.org  gamelike.el  gamelike.lisp  gamelike.org  hoovy.asd  hoovy.cl  hoovy.el  hoovy.lisp  hoovy.org  human-tech.org  index.html  index.js  init.el  inspiration.txt  langtest.org  monsterpeace.el  (+30 more)
Novapilot/: Project.toml
ahrefs/: .merlin  ahrefs.ml  ahrefs_tcp.ml  ahrefs_web.ml  dune
attic/: Torah.hs  alleg.lisp  boust.el  engine.lisp  hoovy.asd  hoovy.lisp  huma-math.lisp  humax.cl  humax.org  landone.org  nova-sdl2.lisp  nova.rs  nova.scm  package.lisp  qabala.lisp  raylib.scm  scratch.lisp  sdl-ffi.cl  start-elnode.el
bs-rot/: bsconfig.json  package.json  rot.re
config/: sys.config
erl-dev/: rebar.config
gamelike/: Makefile  README  README.md  actor.lisp  char.lisp  char.pl  client.js  database.world  editor.el  game-sdl.lisp  game.c  game.js  game.pl  gamelike.asd  gamelike.js  gamelike.lisp  index.html  item.lisp  item.pl  jobs.el  jobs.pl  map.lisp  map.pl  monster.lisp  namegen.lisp  nova.lisp  package.lisp  qb.el  qbl.lisp  realm.el  server.pl  space.pl  storage.lisp  tanach.pl  test2.pl  wanderman.el  wanderman.lisp  window.lisp  world.lisp  world.pl  (+1 more)
gamelike-pl/: char.pl  config.pl  save.db
gunzip/: Makefile  gunzip.c  gunzip.pl
humaweb/: actor.cl  display.cl  geom-js.lisp  graph-js.lisp  huma-math.cl  huma-util.cl  humaweb.asd  output.cl  package.cl  package.lisp
humax/: humax.asd  humax.cl  humax.lisp  humax.org  namegen.cl  (+1 more)
nova/: .gitignore  .merlin  .ocamlinit  Cargo.toml  Makefile  _editor.ml  _old_part.ml  _tags  dev.ml  draw.lisp  draw.ml  dune  editor.ml  engine.lisp  engine.ml  game.ml  geom.ml  huma.ml  huma.mli  input.ml  item.lisp  main.ml  model.ml  monster.lisp  namegen.lisp  nova-ecl.c  nova-raylib.c  nova-sdl.c  nova-util.c  nova.asd  nova.c  nova.cl  nova.h  nova.lisp  nova.ml  novapilot.ml  novapoop.ml  package.cl  package.lisp  part.lisp  (+25 more)
nova/gamelike/: .merlin  .ocamlinit  actor.ml  char.ml  dune  gamelike.ml  gamelike_cli.ml  item.ml  jobs.ml  mob.ml  world.ml
nova/pilot/: .merlin  bullet.ml  dune  enemy.ml  pilot.ml  pilot_cli.ml  pilot_cli2.ml  pilot_web.ml
novapilot/: .merlin  Gambit-Options.txt  Makefile  Makefile.other  _cairo_test.ml  _play.ml  _tags  bubbles.c  draw.ml  draw.mli  dune  dune-project  game.ml  huma-math.ml  huma.ml  index.html  input.ml  lisp.ml  main.ss  nova-guile.c  nova-sdl2.lisp  nova.lisp  nova.ml  nova.scm  nova_input.ml  novapilot.asd  novapilot.ml  novapilot_cli.ml  novapilot_web.ml  oldnova.ml  package.cl  render.ml  render.mli  system-glfw.ml  system_glfw.ml  system_html5.ml  system_sdl.ml  system_webgl.ml
novapilot/gamelike/: .merlin  dune  gamelike.ml
novapilot/nova/: .merlin  Make.libs  Makefile  dune  geom.ml  math.ml  nova-ecl.c  nova-glfw.c  nova-guile.c  nova-prolog.c  nova.h  nova.ml  novapilot.c  test.c  util.ml
novapilot/novapilot/: .merlin  dune  novapilot.ml
(+215 files in other folders)
