(library
 (name nova)
 (modules util math geom model engine system model
          system_raylib raylib)
 (libraries ctypes.foreign)
 (c_library_flags (-lraylib)))
;  (c_names _stub)

; (library
;  (name nova_cli)
;  (modules system_glfw render draw)
;  (libraries nova JsOfOCairo cairo2 tgls.tgl3 glfw-ocaml))
; (library
;  (name nova_web)
;  (modules system_html5)
;  (libraries nova JsOfOCairo js_of_ocaml-lwt))

(executable
 (name novatop)
 (modules novatop)
 (libraries utop
            ctypes ctypes.foreign ctypes.stubs
            nova
            )
 (modes byte))

;  (libraries  compiler-libs.toplevel)
;  (link_flags (-linkall))
