(library
 (name draw)
 (modules draw)
 (libraries JsOfOCairo))

(executable
 (name novapilot)
 (modules novapilot system_glfw nova)
 ;;(modes (native exe))
 ;;(link_flags -linkall)
 ;;(link_flags -cclib -Wl,-E)
  ;;(libraries glfw-ocaml tgls.tgl3 nanovg cairo2 vg.cairo))
 (libraries glfw-ocaml tgls.tgl3 JsOfOCairo cairo2 draw))

(executable
 (name novapilot_web)
 (modules novapilot_web)
 (libraries JsOfOCairo js_of_ocaml draw))
