(library
 (name nova)
 (modules nova)
 (libraries JsOfOCairo))

(executable
 (name novapilot_cli)
 (modules novapilot_cli system_glfw draw)
 ;;(modes (native exe))
 ;;(link_flags -linkall)
 ;;(link_flags -cclib -Wl,-E)
  ;;(libraries glfw-ocaml tgls.tgl3 nanovg cairo2 vg.cairo))
 (libraries glfw-ocaml tgls.tgl3 JsOfOCairo cairo2 nova))

(executable
 (name novapilot_web)
 (modules novapilot_web)
 (libraries JsOfOCairo js_of_ocaml nova))
