(library
 (name draw)
 (modules draw)
 (libraries JsOfOCairo))

(executable
 (name novapilot_cli)
 (modules novapilot_cli system_glfw render)
 (libraries glfw-ocaml tgls.tgl3 JsOfOCairo cairo2 draw novapilot))

(executable
 (name novapilot_web)
 (modules novapilot_web system_html5)
 ;; this is only needed for system_webgl
 ;;(preprocess (pps js_of_ocaml-ppx))
 (libraries JsOfOCairo js_of_ocaml-lwt draw novapilot))

(executable
 (name gamelike_cli)
 (modules gamelike_cli)
 (libraries draw gamelike))
